[gd_scene load_steps=5 format=2]

[ext_resource path="res://states/attract/attract.gd" type="Script" id=1]
[ext_resource path="res://states/attract/phase_instructions.tscn" type="PackedScene" id=2]
[ext_resource path="res://states/attract/phase_controls.tscn" type="PackedScene" id=3]
[ext_resource path="res://states/attract/phase_hiscore.tscn" type="PackedScene" id=4]

[node name="Attract" type="Node"]
script = ExtResource( 1 )

[node name="PhaseControls" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PhaseInstructions" parent="." instance=ExtResource( 2 )]
visible = false

[node name="PhaseHiscore" parent="." instance=ExtResource( 4 )]
